syntax = "proto3";

option go_package = "github.com/YazeedAlKhalaf/alyamamah/quasar/pkg/api/auth;authpb";

message LoginRequest {
    string username = 1;
    string password = 2;
    string fcm_token = 3;
}

message LoginResponse {
    string access_token = 1;
    string next_step = 2;
}

message VerifyEmailRequest {
    string code = 1;
}

message VerifyEmailResponse {
    string access_token = 2;
}

service Auth {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
}